traffic_control/example/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: caddy-demo
  labels:
    app: caddy
spec:
  serviceAccountName: caddy
  containers:
    - name: caddy-demo
      image: xcaddy:v1
