traffic_control/example/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
  labels:
    app: caddy
spec:
  selector:
    app: caddy
  ports:
    - port: 2088
      protocol: TCP
